--- a/src/Goals/Goals.css
+++ b/src/Goals/Goals.css
@@ -15,7 +15,7 @@
     border-radius: 10px;
     padding: 20px;
     margin: 7%;
-
+    background-color: #004953;
 }
 .goalsP1 {
     font-size: 2rem;
@@ -58,6 +58,7 @@
     padding: 20px;
     margin-left: 8%;
     margin-right: 8%;
+    background-color: #004953;
 }
 
 .goalsh23 {
@@ -101,6 +102,7 @@
     padding: 20px;
     margin-left: 8%;
     margin-right: 8%;
+    background-color: #004953
 }
 
 .goalsp4 {
@@ -134,6 +136,7 @@
     padding: 20px;
     margin-left: 8%;
     margin-right: 8%;
+    background-color: #004953
 }
 
 .goalsp5 {
@@ -167,6 +170,7 @@
     padding: 20px;
     margin-left: 8%;
     margin-right: 8%;
+    background-color: #004953
 }
 
 .goalsp6 {
@@ -200,6 +204,7 @@
     padding: 20px;
     margin-left: 8%;
     margin-right: 8%;
+    background-color: #004953
 }
 
 .goalsp7 {
@@ -233,6 +238,7 @@
     padding: 20px;
     margin-left: 8%;
     margin-right: 8%;
+    background-color: #004953
 }
 
 .goalsp8 {
