--- a/src/Team/Team.css
+++ b/src/Team/Team.css
@@ -8,6 +8,7 @@
     border-radius: 10px;
     margin: 6%;
     padding: 20px;
+    background-color: #555555  ;
   }
 
   .georgeH1 {
@@ -44,6 +45,7 @@
     border-radius: 10px;
     margin: 6%;
     padding: 20px;
+    background-color: #1a1110 ;
   }
   .davidH2 {
     font-family: 'Dosis', sans-serif;
@@ -65,6 +67,7 @@
     border-radius: 10px;
     margin: 6%;
     padding: 20px;
+    background-color: #1a2421;
   }
   .florenceH2 {
     font-family: 'Dosis', sans-serif;
@@ -86,6 +89,7 @@
     border-radius: 10px;
     margin: 6%;
     padding: 20px;
+    background-color: #1c2841;
   }
   .antonyH2 {
     font-family: 'Dosis', sans-serif;
@@ -107,6 +111,7 @@
     border-radius: 10px;
     margin: 6%;
     padding: 20px;
+    background-color: #560319;
   }
   .georgeMH1 {
     font-family: 'Dosis', sans-serif;
