fixed several issues as well as added quality

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -37,6 +37,13 @@ margin-bottom: 5%;
 .image2 {
     width: 45%;
 }
+.welcomep2 {
+    margin: 5%;
+    font-size: 1.6em;
+    font-family: 'Dosis', sans-serif;
+    text-align: center;
+    color: #f2f3f4;
+}
 
 html body {
     background-color: #36454f;
