--- a/src/About/About.css
+++ b/src/About/About.css
@@ -5,3 +5,10 @@
     text-align: center;
     font-size: 1.9em;
 }
+.aboutH1 {
+    font-family: 'Dosis', sans-serif;
+    color: #f2f3f4;
+    margin: 5%;
+    text-align: center;
+    font-size: 2.5em;
+}
